# ckanext-vip-portal

./: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/vip_portal/: config.py  config_declaration.yaml  interfaces.py  plugin.py  utils.py
ckanext/vip_portal/assets/: script.js  webassets.yml
ckanext/vip_portal/tests/: test_plugin.py
