[metadata]
name = ckanext-vip-portal
version = 0.2.3a0
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DataShades/ckanext-vip-portal
author = Sergey Motornyuk
author_email = sergey.motornyuk@linkdigital.com.au
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             vip_portal = ckanext.vip_portal.plugin:VipPortalPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]
dev =
    pytest-ckan

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/vip_portal/i18n/ckanext-vip_portal.pot
width = 80

[init_catalog]
domain = ckanext-vip_portal
input_file = ckanext/vip_portal/i18n/ckanext-vip_portal.pot
output_dir = ckanext/vip_portal/i18n

[update_catalog]
domain = ckanext-vip_portal
input_file = ckanext/vip_portal/i18n/ckanext-vip_portal.pot
output_dir = ckanext/vip_portal/i18n
previous = true

[compile_catalog]
domain = ckanext-vip_portal
directory = ckanext/vip_portal/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
